--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -33,6 +33,7 @@
 				<version>5.0.0</version>
 				<scope>compile</scope>
 		</dependency>
+				
 
   </dependencies>
 		
@@ -92,7 +93,7 @@
 						<archive>
 							<manifest>
 								<mainClass>
-									com.badalsarkar.UrlCheck
+									com.badalsarkar.App
 								</mainClass>
 							</manifest>
 						</archive>
@@ -106,7 +107,7 @@
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>1.6.0</version>
 					<configuration>
-							<mainClass>com.badalsarkar.UrlCheck</mainClass>
+							<mainClass>com.badalsarkar.App</mainClass>
 					</configuration>
 				</plugin>
       </plugins>
