--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,13 @@
 				<version>5.0.0</version>
 				<scope>compile</scope>
 		</dependency>
-				
+		
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+		    <groupId>commons-cli</groupId>
+		    <artifactId>commons-cli</artifactId>
+		    <version>1.4</version>
+		</dependency>				
 
   </dependencies>
 		
