--- a/.classpath
+++ b/.classpath
@@ -8,20 +8,19 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="E:/School/Seneca/Seneca_2020/Seneca_Fall_2020/DPS909-Open-Src/Release0.1/commons-io-2.8.0-bin/commons-io-2.8.0/commons-io-2.8.0.jar"/>
+	<classpathentry kind="lib" path="E:/School/Seneca/Seneca_2020/Seneca_Fall_2020/DPS909-Open-Src/Release0.2/commons-cli-1.4-bin/commons-cli-1.4/commons-cli-1.4.jar"/>
+	<classpathentry kind="lib" path="E:/School/Seneca/Seneca_2020/Seneca_Fall_2020/DPS909-Open-Src/Release0.2/junit-4.13.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
