--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 						</execution>
 					</executions>
 					<configuration>
+						<finalName>Blink</finalName>
 						<archive>
 							<manifest>
 								<mainClass>
@@ -106,6 +107,7 @@
 						<descriptorRefs>
 							<descriptorRef>jar-with-dependencies</descriptorRef>
 						</descriptorRefs>
+						<appendAssemblyId>false</appendAssemblyId>
 					</configuration>
 				</plugin>
 				<plugin>
