--- a/pom.xml
+++ b/pom.xml
@@ -3,228 +3,235 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.badalsarkar</groupId>
-	<artifactId>blink</artifactId>
-	<version>1.0-SNAPSHOT</version>
+<groupId>com.badalsarkar</groupId>
+<artifactId>blink</artifactId>
+<version>1.0-SNAPSHOT</version>
 
-	<name>blink</name>
+<name>blink</name>
 	<!-- FIXME change it to the project's website -->
-	<url>https://github.com/badalsarkar/Blink</url>
+<url>https://github.com/badalsarkar/Blink</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.11</maven.compiler.source>
-		<maven.compiler.target>1.11</maven.compiler.target>
-	</properties>
+<properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<maven.compiler.source>1.11</maven.compiler.source>
+	<maven.compiler.target>1.11</maven.compiler.target>
+</properties>
 
-	<repositories>
-		<repository>
-			<id>apisimulator-github-repo</id>
-			<url>https://github.com/apimastery/APISimulator/raw/maven-repository</url>
-		</repository>
-	</repositories>
+<repositories>
+	<repository>
+		<id>apisimulator-github-repo</id>
+		<url>https://github.com/apimastery/APISimulator/raw/maven-repository</url>
+	</repository>
+</repositories>
 
 
-	<dependencies>
-		<!-- https://mvnrepository.com/artifact/com.diogonunes/JColor -->
-		<dependency>
-			<groupId>com.diogonunes</groupId>
-			<artifactId>JColor</artifactId>
-			<version>5.0.0</version>
-			<scope>compile</scope>
-		</dependency>
+<dependencies>
+	<!-- https://mvnrepository.com/artifact/com.diogonunes/JColor -->
+	<dependency>
+		<groupId>com.diogonunes</groupId>
+		<artifactId>JColor</artifactId>
+		<version>5.0.0</version>
+		<scope>compile</scope>
+	</dependency>
 
-		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.4</version>
-		</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+	<dependency>
+		<groupId>commons-cli</groupId>
+		<artifactId>commons-cli</artifactId>
+		<version>1.4</version>
+	</dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.4.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.4.2</version>
-			<scope>test</scope>
-		</dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-api</artifactId>
+		<version>5.4.2</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-engine</artifactId>
+		<version>5.4.2</version>
+		<scope>test</scope>
+	</dependency>
 
-		<dependency>
-			<groupId>com.apisimulator</groupId>
-			<artifactId>apisimulator-http-embedded</artifactId>
-			<version>1.7</version>
-		</dependency>
-	</dependencies>
+	<dependency>
+		<groupId>com.apisimulator</groupId>
+		<artifactId>apisimulator-http-embedded</artifactId>
+		<version>1.7</version>
+	</dependency>
 
-	<build>
-		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
-				defaults (may be moved to parent pom) -->
-			<plugins>
-				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.1.0</version>
-				</plugin>
-				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
-					<configuration>
-						<release>11</release>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.1</version>
-					<configuration>
-						<argLine>${surefireArgLine}</argLine>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>2.5.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.8.2</version>
-				</plugin>
-				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-				<plugin>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>3.7.1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-project-info-reports-plugin</artifactId>
-					<version>3.0.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<executions>
-						<execution>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<finalName>Blink</finalName>
-						<archive>
-							<manifest>
-								<mainClass>
-									com.badalsarkar.App
-								</mainClass>
-							</manifest>
-						</archive>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
-						<appendAssemblyId>false</appendAssemblyId>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.6.0</version>
-					<configuration>
-						<mainClass>com.badalsarkar.App</mainClass>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>com.diffplug.spotless</groupId>
-				<artifactId>spotless-maven-plugin</artifactId>
-				<version>2.5.0</version>
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.5</version>
+	</dependency>
+</dependencies>
+
+<build>
+	<pluginManagement><!-- lock down plugins versions to avoid using Maven 
+	defaults (may be moved to parent pom) -->
+	<plugins>
+		<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+		<plugin>
+			<artifactId>maven-clean-plugin</artifactId>
+			<version>3.1.0</version>
+		</plugin>
+		<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+		<plugin>
+			<artifactId>maven-resources-plugin</artifactId>
+			<version>3.0.2</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.0</version>
+			<configuration>
+				<release>11</release>
+			</configuration>
+		</plugin>
+		<plugin>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.22.1</version>
+			<configuration>
+				<argLine>${surefireArgLine}</argLine>
+			</configuration>
+		</plugin>
+		<plugin>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>3.0.2</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-install-plugin</artifactId>
+			<version>2.5.2</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8.2</version>
+		</plugin>
+		<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+		<plugin>
+			<artifactId>maven-site-plugin</artifactId>
+			<version>3.7.1</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-project-info-reports-plugin</artifactId>
+			<version>3.0.0</version>
+		</plugin>
+		<plugin>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<finalName>Blink</finalName>
+				<archive>
+					<manifest>
+						<mainClass>
+							com.badalsarkar.App
+						</mainClass>
+					</manifest>
+				</archive>
+				<descriptorRefs>
+					<descriptorRef>jar-with-dependencies</descriptorRef>
+				</descriptorRefs>
+				<appendAssemblyId>false</appendAssemblyId>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>exec-maven-plugin</artifactId>
+			<version>1.6.0</version>
+			<configuration>
+				<mainClass>com.badalsarkar.App</mainClass>
+			</configuration>
+		</plugin>
+	</plugins>
+</pluginManagement>
+<plugins>
+	<plugin>
+		<groupId>com.diffplug.spotless</groupId>
+		<artifactId>spotless-maven-plugin</artifactId>
+		<version>2.5.0</version>
+		<configuration>
+			<java>
+				<googleJavaFormat>
+					<version>1.9</version>
+				</googleJavaFormat>
+				<importOrder />
+				<removeUnusedImports />
+			</java>
+		</configuration>
+		<executions>
+			<execution>
+				<id>spotless-verify-check</id>
+				<phase>verify</phase>
+				<goals>
+					<goal>check</goal>
+				</goals>
+			</execution>
+		</executions>
+	</plugin>
+	<plugin>
+		<groupId>com.github.spotbugs</groupId>
+		<artifactId>spotbugs-maven-plugin</artifactId>
+		<version>4.1.4</version>
+		<configuration>
+			<effort>Max</effort>
+			<threshold>Low</threshold>
+			<xmlOutput>true</xmlOutput>
+		</configuration>
+		<executions>
+			<execution>
+				<goals>
+					<goal>check</goal>
+				</goals>
+			</execution>
+		</executions>
+	</plugin>
+	<plugin>
+		<groupId>org.jacoco</groupId>
+		<artifactId>jacoco-maven-plugin</artifactId>
+		<version>0.8.4 </version>
+		<executions>
+			<!-- Prepares the property pointing to the JaCoCo runtime agent which 
+			is passed as VM argument when Maven the Surefire plugin is executed. -->
+			<execution>
+				<id>pre-unit-test</id>
+				<goals>
+					<goal>prepare-agent</goal>
+				</goals>
 				<configuration>
-					<java>
-						<googleJavaFormat>
-							<version>1.9</version>
-						</googleJavaFormat>
-						<importOrder />
-						<removeUnusedImports />
-					</java>
+					<!-- Sets the path to the file which contains the execution data. -->
+					<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+						<!-- Sets the name of the property containing the settings for JaCoCo 
+						runtime agent. -->
+					<propertyName>surefireArgLine</propertyName>
 				</configuration>
-				<executions>
-						<execution>
-						<id>spotless-verify-check</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.github.spotbugs</groupId>
-				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.1.4</version>
+			</execution>
+			<!-- Ensures that the code coverage report for unit tests is created 
+			after unit tests have been run. -->
+			<execution>
+				<id>post-unit-test</id>
+				<phase>test</phase>
+				<goals>
+					<goal>report</goal>
+				</goals>
 				<configuration>
-					<effort>Max</effort>
-					<threshold>Low</threshold>
-					<xmlOutput>true</xmlOutput>
+					<!-- Sets the path to the file which contains the execution data. -->
+					<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+						<!-- Sets the output directory for the code coverage report. -->
+					<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
 				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4 </version>
-				<executions>
-					<!-- Prepares the property pointing to the JaCoCo runtime agent which 
-						is passed as VM argument when Maven the Surefire plugin is executed. -->
-					<execution>
-						<id>pre-unit-test</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<!-- Sets the path to the file which contains the execution data. -->
-							<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-							<!-- Sets the name of the property containing the settings for JaCoCo 
-								runtime agent. -->
-							<propertyName>surefireArgLine</propertyName>
-						</configuration>
-					</execution>
-					<!-- Ensures that the code coverage report for unit tests is created 
-						after unit tests have been run. -->
-					<execution>
-						<id>post-unit-test</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-						<configuration>
-							<!-- Sets the path to the file which contains the execution data. -->
-							<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-							<!-- Sets the output directory for the code coverage report. -->
-							<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+			</execution>
+		</executions>
+	</plugin>
+</plugins>
 	</build>
 </project>
