--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<!-- Project metadata -->
 	<groupId>ca.badalsarkar</groupId>
 	<artifactId>blink</artifactId>
-	<version>v1.0.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Blink</name>
 	<description>A commandline application to validate URLs with HTTP/HTTPS scheme</description>
@@ -33,7 +33,7 @@
 		<connection>scm:git:git@github.com:badalsarkar/Blink.git</connection>
 		<developerConnection>scm:git:git@github.com:badalsarkar/Blink.git</developerConnection>
 		<url>https://github.com/badalsarkar/Blink</url>
-	  <tag>v1.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<!-- Remote repository to deploy the project -->
