--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- Project metadata -->
 	<groupId>ca.badalsarkar</groupId>
 	<artifactId>blink</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Blink</name>
 	<description>A commandline application to validate URLs with HTTP/HTTPS scheme</description>
@@ -33,8 +35,7 @@
 		<connection>scm:git:git@github.com:badalsarkar/Blink.git</connection>
 		<developerConnection>scm:git:git@github.com:badalsarkar/Blink.git</developerConnection>
 		<url>https://github.com/badalsarkar/Blink</url>
-	  <tag>HEAD</tag>
-  </scm>
+	</scm>
 
 	<!-- Remote repository to deploy the project -->
 	<distributionManagement>
