--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<!-- Project metadata -->
 	<groupId>ca.badalsarkar</groupId>
 	<artifactId>blink</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Blink</name>
 	<description>A commandline application to validate URLs with HTTP/HTTPS scheme</description>
@@ -33,7 +33,7 @@
 		<connection>scm:git:git@github.com:badalsarkar/Blink.git</connection>
 		<developerConnection>scm:git:git@github.com:badalsarkar/Blink.git</developerConnection>
 		<url>https://github.com/badalsarkar/Blink</url>
-	  <tag>v1.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<!-- Remote repository to deploy the project -->
@@ -182,35 +182,7 @@
 					<version>3.0.0</version>
 				</plugin>
 
-				<!-- Assembly plugin -->
-				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<executions>
-						<execution>
-							<id>maven-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<finalName>Blink</finalName>
-						<archive>
-							<manifest>
-								This is for version information
-								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-								<mainClass>
-									ca.badalsarkar.App
-								</mainClass>
-							</manifest>
-						</archive>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
-						<appendAssemblyId>false</appendAssemblyId>
-					</configuration>
-				</plugin>
+				
 
 
 				<plugin>
@@ -226,6 +198,36 @@
 
 
 		<plugins>
+		<!-- Assembly plugin -->
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.3.0</version>
+					<configuration>
+						<finalName>Blink</finalName>
+						<archive>
+							<manifest>
+<!-- 								This is for version information -->
+								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+								<mainClass>
+									ca.badalsarkar.App
+								</mainClass>
+							</manifest>
+						</archive>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+						<appendAssemblyId>false</appendAssemblyId>
+					</configuration>
+					<executions>
+						<execution>
+							<id>make-assembly</id>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
